@@ -1,3 +1,8 @@
+2011-07-10  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/49690
+	* gfortran.dg/intrinsic_signal.f90: New.
+
 2011-07-10  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/49562
